appId: ${APP_ID}
env:
  TRANSACTION_CARD_ID: ${TRANSACTION_CARD_ID}
---
- longPressOn:
    id: ${TRANSACTION_CARD_ID}
    index: 0
- extendedWaitUntil:
    visible:
      id: 'TransactionContextMenu.ConvertToTransferButton'
- assertVisible:
    id: 'TransactionContextMenu.StartDepositButton'
- tapOn:
    id: 'TransactionContextMenu.ConvertToTransferButton'
- waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: 'ConvertToTransfer.Page'
    timeout: 10000
