appId: ${APP_ID}
env:
  ACTION_ITEM_ID: ${ACTION_ITEM_ID}
  FORM_TITLE: ${FORM_TITLE}
---
- runFlow:
    file: open-action-menu.flow.yaml
    env:
      ACTION_ITEM_ID: ${ACTION_ITEM_ID}

- tapOn:
    id: '${ACTION_ITEM_ID}.Label'
    retryTapIfNoChange: true
- extendedWaitUntil:
    visible: ${FORM_TITLE}
- extendedWaitUntil:
    visible:
      id: 'TransactionKeypad.Digit.1'
- waitForAnimationToEnd
