appId: ${APP_ID}
---
- evalScript: ${output.accountAlreadySelected = false}
- runFlow:
      when:
          visible:
              id: 'TransactionForm\.SelectedAccount\..*'
      commands:
          - copyTextFrom:
                id: 'TransactionForm\.SelectedAccount\..*'
          - evalScript: ${output.accountAlreadySelected = maestro.copiedText == ACCOUNT_NAME}
- runFlow:
      when:
          true: ${!output.accountAlreadySelected}
      commands:
          - retry:
                maxRetries: 3
                commands:
                    - tapOn:
                          id: 'TransactionForm.AccountSelector'
                    - extendedWaitUntil:
                          visible:
                              id: 'AccountPickerBottomSheet.Input'
                          timeout: 3000
          - runFlow:
                file: ../shared/select-account-by-search.flow.yaml
                env:
                    ACCOUNT_NAME: ${ACCOUNT_NAME}
