appId: ${APP_ID}
---
- tapOn:
    id: 'TransactionForm.SubmitButton'
- waitForAnimationToEnd
- evalScript: ${output.returnedToTransactionInfo = true}
- runFlow:
    when:
      visible:
        id: 'TransactionsPage.Container'
    commands:
      - evalScript: ${output.returnedToTransactionInfo = false}
- runFlow:
    when:
      true: ${output.returnedToTransactionInfo}
    commands:
      - extendedWaitUntil:
          visible:
            id: 'TransactionInfo.Page'
          timeout: 5000
      - tapOn:
          id: 'PageHeader.BackButton'
      - waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: 'TransactionsPage.Container'
    timeout: 15000
