appId: ${APP_ID}
---

- runFlow: ../shared/navigate-to-settings.flow.yaml

- scrollUntilVisible:
    element:
      id: 'SettingsPage.ManageTagsCard'
    direction: DOWN
    speed: 20
- tapOn:
    id: 'SettingsPage.ManageTagsCard'
- extendedWaitUntil:
    visible: 'Tags'

- tapOn:
    id: 'ActionButton'
- waitForAnimationToEnd

- tapOn: 'Tag'
- waitForAnimationToEnd

- tapOn:
    id: 'TagForm.Input'
- inputText: 'E2E Tag'
- hideKeyboard

- tapOn:
    id: 'TagForm.Submit'

- extendedWaitUntil:
    visible: 'E2E Tag, Swipe left'
    timeout: 10000
