appId: ${APP_ID}
---

- runFlow: ../shared/navigate-to-settings.flow.yaml

- scrollUntilVisible:
    element:
      id: 'SettingsPage.ManageTagsCard'
    direction: DOWN
    speed: 20
- tapOn:
    id: 'SettingsPage.ManageTagsCard'
- extendedWaitUntil:
    visible: 'Tags'

- swipe:
    from:
      text: 'E2E Edited Tag, Swipe left'
    direction: LEFT

- tapOn:
    id: 'DeletableRow.DeleteButton'

- tapOn: 'Delete'

- waitForAnimationToEnd

- assertNotVisible: 'E2E Edited Tag, Swipe left'
