appId: ${APP_ID}
---

- tapOn:
    id: 'TabBar.Transactions'
- extendedWaitUntil:
    visible: 'Transactions'

- tapOn:
    id: 'ActionButton'
- extendedWaitUntil:
    visible:
      id: 'ActionItem.0'
- waitForAnimationToEnd

- tapOn:
    text: 'Expense'
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: 'New Expense'

- tapOn: '4'
- tapOn: '2'

- tapOn:
    id: 'TransactionForm.AccountSelector'
- waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: 'AccountPickerBottomSheet.Input'
- tapOn:
    id: 'AccountPickerBottomSheet.Input'
- inputText: 'E2E Txn Account'
- extendedWaitUntil:
    visible: 'E2E Txn Account'
- tapOn:
    text: 'E2E Txn Account'
    index: 1

- tapOn:
    id: 'TransactionForm.CategorySelector'
- waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: 'CategoryPickerBottomSheet.Input'
- tapOn:
    id: 'CategoryPickerBottomSheet.Input'
- inputText: 'E2E Txn Category'
- extendedWaitUntil:
    visible:
      id: 'CategoryPickerBottomSheet.Card.0'
- tapOn:
    id: 'CategoryPickerBottomSheet.Card.0'

- tapOn:
    id: 'TransactionForm.CommentInput'
- waitForAnimationToEnd
- tapOn:
    id: 'NoteInput.Input'
- inputText: 'E2E Test Expense'
- tapOn:
    id: 'NoteInput.SubmitButton'
- waitForAnimationToEnd

- tapOn:
    id: 'TransactionForm.SubmitButton'

- extendedWaitUntil:
    visible: 'Transactions'

- assertVisible: 'E2E Test Expense'
