appId: ${APP_ID}
---

- tapOn:
    id: 'TabBar.Transactions'
- extendedWaitUntil:
    visible: 'Transactions'

- tapOn:
    id: 'ActionButton'
- extendedWaitUntil:
    visible:
      id: 'ActionItem.2'
- waitForAnimationToEnd

- tapOn:
    id: 'ActionItem.2'
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: 'New Transfer'

- tapOn: '5'
- tapOn: '0'

- tapOn:
    id: 'TransferForm.FromAccount'
- waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: 'AccountPickerBottomSheet.Input'
- tapOn:
    id: 'AccountPickerBottomSheet.Input'
- inputText: 'E2E Txn Account'
- extendedWaitUntil:
    visible: 'E2E Txn Account'
- tapOn:
    text: 'E2E Txn Account'
    index: 1

- tapOn:
    id: 'TransferForm.ToAccount'
- waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: 'AccountPickerBottomSheet.Input'
- tapOn:
    id: 'AccountPickerBottomSheet.Input'
- inputText: 'E2E Transfer Account'
- extendedWaitUntil:
    visible: 'E2E Transfer Account'
- tapOn:
    text: 'E2E Transfer Account'
    index: 1

- tapOn:
    id: 'TransactionForm.CommentInput'
- waitForAnimationToEnd
- tapOn:
    id: 'NoteInput.Input'
- inputText: 'E2E Test Transfer'
- tapOn:
    id: 'NoteInput.SubmitButton'
- waitForAnimationToEnd

- tapOn:
    id: 'TransactionForm.SubmitButton'

- extendedWaitUntil:
    visible: 'Transactions'

- assertVisible: 'E2E Test Transfer'
